kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: web-inventory
  name: web-inventory
spec:
  ports:
  - name: web-inventory
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: web-inventory
  type: ClusterIP
